change(table): avoid the need for extra alignment classes
- Table HeaderCell supports textAlign just like TableCell does

--- a/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
+++ b/src/components/manage/Blocks/SimpleDataTable/templates/expandable/style.less
@@ -182,20 +182,6 @@
 
 .popup-table-container {
   margin-bottom: 20px;
-
-  .ui.table thead tr th {
-    &.center {
-      text-align: center;
-    }
-
-    &.right {
-      text-align: right;
-    }
-
-    &.left {
-      text-align: left;
-    }
-  }
 }
 
 .popup-logo-container {
